dev/test_programs/INVALID/group5/scanner_literal_rune_multiline.go
package scanner_literal_rune_multiline

// Multiline interpreted rune literals not allowed

var r rune = '
';
